--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,11 @@ branches:
     - master
 
 before_install:
+  # yarn
   - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.16.0
   - export PATH=$HOME/.yarn/bin:$PATH
+  # tree
+  - sudo apt-get install tree
 
 cache:
   yarn: true
