--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "Workbox"
   ],
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "gulp": "^4.0.2"
   },
   "devDependencies": {
     "browser-sync": "^2.26.5",
@@ -26,7 +27,6 @@
     "eslint": "^5.16.0",
     "eslint-config-google": "^0.13.0",
     "eslint-plugin-prettier": "^3.1.0",
-    "gulp": "^4.0.2",
     "gulp-babel-minify": "^0.5.0",
     "gulp-cssbeautify": "^1.0.1",
     "gulp-debug": "^4.0.0",
@@ -46,6 +46,7 @@
     "gulp-stylelint": "^9.0.0",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-pngquant": "^8.0.0",
+    "js-yaml": "^3.13.1",
     "postcss-discard-comments": "^4.0.2",
     "postcss-preset-env": "^6.6.0",
     "prettier": "^1.18.2",
