--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -7,21 +7,24 @@ extends:
 
 rules:
     indent: [error, 2]
-    quotes: [error, double]
+    quotes: [2, single, {allowTemplateLiterals: true}]
     semi: [error, always]
     comma-dangle: [error, never]
-    no-console: off
     no-unused-vars: warn
-    no-var: off # use var just for browser
+    no-var: 1 # use var just for browser
     spaced-comment: off
+    max-len: [error, 120]
+    arrow-parens: [2, always]
+    object-curly-spacing: [error, always]
+    no-invalid-this: off
+    new-cap: off
 
 env:
     browser: true
-    node: true
     es6: true
 
 parserOptions:
-    ecmaVersion: 2017 # 2018
+    ecmaVersion: 2018
     sourceType: module
 
 globals:
