--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -1,7 +1,7 @@
-printWidth: 80
+printWidth: 120 #80
 tabWidth: 2
 useTabs: false
 semi: true
-singleQuote: false
+singleQuote: true
 trailingComma: none
 arrowParens: always
