--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "private": true,
   "name": "illvart",
   "description": "Personal website running on Node.js.",
   "version": "1.0.1",
@@ -21,16 +22,17 @@
   },
   "devDependencies": {
     "browser-sync": "^2.26.5",
+    "chalk": "^2.4.2",
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
-    "del": "^4.1.1",
+    "del": "^5.0.0",
     "eslint": "^6.0.0",
     "eslint-config-google": "^0.13.0",
     "eslint-plugin-prettier": "^3.1.0",
     "gulp-babel-minify": "^0.5.0",
     "gulp-cssbeautify": "^1.0.1",
     "gulp-debug": "^4.0.0",
-    "gulp-eslint": "^5.0.0",
+    "gulp-eslint": "^6.0.0",
     "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^6.0.0",
     "gulp-inject-string": "^1.1.2",
